@@ -46,6 +46,7 @@
  * 03-Oct-2006 : Deprecated get/setDomainIsPointsInTime() (DG);
  * 11-Jun-2007 : Fixed bug in getDomainBounds() method, and changed default
  *               value for domainIsPointsInTime to false (DG);
+ * 20-Jun-2007 : Removed deprecated code (DG);
  *
  */
 
@@ -83,13 +84,6 @@ public class TimePeriodValuesCollection extends AbstractIntervalXYDataset
      * MIDDLE or END). 
      */
     private TimePeriodAnchor xPosition;
-    
-    /**
-     * A flag that indicates that the domain is 'points in time'.  If this 
-     * flag is true, only the x-value is used to determine the range of values 
-     * in the domain, the start and end x-values are ignored.
-     */
-    private boolean domainIsPointsInTime;
 
     /**
      * Constructs an empty dataset.
@@ -107,7 +101,6 @@ public class TimePeriodValuesCollection extends AbstractIntervalXYDataset
     public TimePeriodValuesCollection(TimePeriodValues series) {
         this.data = new java.util.ArrayList();
         this.xPosition = TimePeriodAnchor.MIDDLE;
-        this.domainIsPointsInTime = false;
         if (series != null) {
             this.data.add(series);
             series.addChangeListener(this);
@@ -383,7 +376,6 @@ public class TimePeriodValuesCollection extends AbstractIntervalXYDataset
      * @return The range.
      */
     public Range getDomainBounds(boolean includeInterval) {
-        boolean interval = includeInterval || this.domainIsPointsInTime;
         Range result = null;
         Range temp = null;
         Iterator iterator = this.data.iterator();
@@ -394,7 +386,7 @@ public class TimePeriodValuesCollection extends AbstractIntervalXYDataset
                 TimePeriod start = series.getTimePeriod(
                         series.getMinStartIndex());
                 TimePeriod end = series.getTimePeriod(series.getMaxEndIndex());
-                if (!interval) {
+                if (!includeInterval) {
                     if (this.xPosition == TimePeriodAnchor.START) {
                         TimePeriod maxStart = series.getTimePeriod(
                                 series.getMaxStartIndex());
@@ -445,9 +437,6 @@ public class TimePeriodValuesCollection extends AbstractIntervalXYDataset
             return false;   
         }
         TimePeriodValuesCollection that = (TimePeriodValuesCollection) obj;
-        if (this.domainIsPointsInTime != that.domainIsPointsInTime) {
-            return false;   
-        }
         if (this.xPosition != that.xPosition) {
             return false;   
         }
@@ -455,37 +444,6 @@ public class TimePeriodValuesCollection extends AbstractIntervalXYDataset
             return false;
         }
         return true;   
-    }
-
-    // --- DEPRECATED METHODS -------------------------------------------------
-    
-    /**
-     * Returns a flag that controls whether the domain is treated as 'points 
-     * in time'.  This flag is used when determining the max and min values for 
-     * the domain.  If true, then only the x-values are considered for the max 
-     * and min values.  If false, then the start and end x-values will also be 
-     * taken into consideration
-     *
-     * @return The flag.
-     * 
-     * @deprecated This flag is no longer used by JFreeChart (as of version 
-     *     1.0.3).
-     */
-    public boolean getDomainIsPointsInTime() {
-        return this.domainIsPointsInTime;
-    }
-
-    /**
-     * Sets a flag that controls whether the domain is treated as 'points in 
-     * time', or time periods.
-     *
-     * @param flag  the new value of the flag.
-     * 
-     * @deprecated This flag is no longer used by JFreeChart (as of version 
-     *     1.0.3).
-     */
-    public void setDomainIsPointsInTime(boolean flag) {
-        this.domainIsPointsInTime = flag;
     }
 
 }
